--- a/src/Components/Pages/Internship/Internship.css
+++ b/src/Components/Pages/Internship/Internship.css
@@ -67,7 +67,7 @@ body, html {
     color: #fff;
   }
   
-  /* / Image Container / */
+  /* Image Container  */
   .image-container {
     margin-top: 30px;
     width: 100%;
@@ -81,7 +81,7 @@ body, html {
     border-radius: 10px;
   }
   
-  /* / Career Section / */
+  /* Career Section  */
   .career-section {
     padding: 60px 20px;
     background-color: #fff;
@@ -99,15 +99,7 @@ body, html {
     color: #666;
   }
   
-  /* .background-shapes {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('background-shapes.png') no-repeat;
-    opacity: 0.1;
-  } */
+
   
   /* / Responsive Design / */
   @media (min-width: 768px) {
@@ -301,7 +293,6 @@ body, html {
     max-width: 100%; 
     margin: 0 auto;
     background-color: black;
-    /* background-image: url('https://images.pexels.com/photos/27223246/pexels-photo-27223246/free-photo-of-panorama-of-a-galaxy.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); */
     background-size: cover; 
     background-position: center; 
     filter: blur(0px);
@@ -428,7 +419,7 @@ body, html {
   }
   
   /* Import Poppins font */
-  @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
+  /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"); */
   
   /* Global Styles */
   body {
