--- a/src/Components/Navbars/Navbar.css
+++ b/src/Components/Navbars/Navbar.css
@@ -1,75 +1,74 @@
 .navbar {
-    background-color: white;
-    border: 1px solid gainsboro;
-    padding: 0.5rem 1rem;
+  background-color: white;
+  border: 1px solid gainsboro;
+  padding: 0.5rem 1rem;
+}
+
+.navbar .navbar-brand {
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.navbar .logo {
+  height: 70px;
+  max-width: 100%;
+}
+
+.navbar .nav-link, 
+.navbar .navbar-toggler-icon {
+  color: black;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.navbar .nav-link:hover {
+  color: green;
+}
+
+.navbar .navbar-toggler {
+  border-color: white;
+}
+
+.navbar .navbar-toggler-icon {
+  background-image: none;
+}
+
+.navbar .navbar-toggler-icon:before {
+  content: '2630';
+  font-size: 1.5em;
+}
+
+.btn-outline-primary {
+  color: red;
+  border: 1px solid black;
+  background-color: transparent;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.btn-outline-primary:hover {
+  background-color: red;
+  color: white;
+}
+
+@media (max-width: 767px) {
+  .navbar .navbar-brand,
+  .navbar .nav-link {
+    text-align: center;
+    display: block;
   }
-  
-  .navbar .navbar-brand {
-    font-size: 15px;
-    font-weight: bold;
+
+  .navbar .nav-link {
+    margin: 0;
   }
-  
+
   .navbar .logo {
-    height: 70px; /* Adjust logo height */
-    max-width: 100%; /* Ensure it scales proportionally */
+    height: 60px;
   }
-  
-  .navbar .nav-link, 
-  .navbar .navbar-toggler-icon {
-    color: black;
-    font-size: 15px;
-    font-weight: bold;
-  }
-  
-  .navbar .nav-link:hover {
-    color: green;
-  }
-  
-  .navbar .navbar-toggler {
-    border-color: white;
-  }
-  
-  .navbar .navbar-toggler-icon {
-    background-image: none;
-  }
-  
-  .navbar .navbar-toggler-icon:before {
-    content: '2630'; /* Unicode for hamburger icon */
-    font-size: 1.5em;
-  }
-  
+
   .btn-outline-primary {
-    color: red; /* Text color */
-    border: 1px solid black; /* Border color */
-    background-color: transparent; /* Transparent background */
-    font-size: 15px;
-    font-weight: bold;
+    display: block;
+    width: 100%;
+    text-align: center;
   }
-  
-  .btn-outline-primary:hover {
-    background-color: red; /* Background color on hover */
-    color: white; /* Text color on hover */
-  }
-  
-  @media (max-width: 767px) {
-    .navbar .navbar-brand,
-    .navbar .nav-link {
-      text-align: center;
-      display: block;
-    }
-  
-    .navbar .nav-link {
-      margin: 0;
-    }
-  
-    .navbar .logo {
-      height: 60px; /* Adjust logo height for mobile */
-    }
-  
-    .btn-outline-primary {
-      display: block;
-      width: 100%;
-      text-align: center;
-    }
-  }
-  
+}
