--- a/src/Components/Pages/Home/Home.css
+++ b/src/Components/Pages/Home/Home.css
@@ -1,4 +1,3 @@
-/* General styles */
 * {
     margin: 0;
     padding: 0;
@@ -26,16 +25,15 @@ body {
 .carousel-image {
     width: 100%;
     height: 100vh;
-    object-fit: cover; /* Ensures the image covers the entire area */
+    object-fit: cover;
 }
 
-/* Carousel Caption */
 .carousel-caption {
     position: absolute;
     bottom: 50%;
     transform: translateY(50%);
     text-align: center;
-    color: #ffffff; /* White text for better contrast */
+    color: #ffffff;
 }
 
 .carousel-caption h1 {
@@ -43,15 +41,15 @@ body {
     font-weight: bold;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
     margin-top: -10cm;
-    animation: scaleIn 1s forwards; /* Scale-in animation */
+    animation: scaleIn 1s forwards;
 }
 
 .carousel-caption p {
     font-size: 1.5rem;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
     margin-bottom: 20px;
-    animation: scaleIn 1s forwards; /* Scale-in animation */
-    animation-delay: 0.5s; /* Delay for paragraph */
+    animation: scaleIn 1s forwards;
+    animation-delay: 0.5s;
 }
 
 .carousel-button {
@@ -68,16 +66,14 @@ body {
     background-color: #0056b3;
 }
 
-/* Change the color of the carousel previous icon to green */
 .carousel-control-prev {
-    color: green; /* Change this to the desired shade of green */
+    color: green;
 }
 
 .carousel-control-prev:hover {
-    color: darkgreen; /* Optional: Change color on hover */
+    color: darkgreen;
 }
 
-/* Responsive Design */
 @media (max-width: 768px) {
     .carousel-caption h1 {
         font-size: 2rem;
@@ -92,7 +88,6 @@ body {
     }
 }
 
-/* Animation Keyframes */
 @keyframes scaleIn {
     from {
         opacity: 0;
