--- a/src/Components/Pages/Internship/Internship.css
+++ b/src/Components/Pages/Internship/Internship.css
@@ -65,7 +65,6 @@ body, html {
     color: #fff;
   }
   
-  /* Image Container  */
   .image-container {
     margin-top: 30px;
     width: 100%;
@@ -409,7 +408,8 @@ body, html {
     }
   }
   
-
+  @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
+  
   body {
     font-family: "Poppins", sans-serif;
     margin: 0;
